# tgramrs

./: .env  .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/tdlib/: auth.rs  check_authentication_code.rs  config.rs  mod.rs  set_authentication_phone_number.rs  td_lib_parameters.rs
src/tdlib/types/: json_value.rs  mod.rs
