[package]
name = "tgramrs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "tgramrs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
client = ["tdjson"]
tdjson = []

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
uuid = {version = "1.6.1", features = ["v4"] }

